Current version of GHK.

--- a/index.html
+++ b/index.html
@@ -178,13 +178,14 @@
             </p>
             <div class="px-4 collapse card info" id="abstract-GHK_ESPS">
               <p class="text-justify">
-                In recent years the macroeconomic environment has been increasingly characterized by local shortages of
-                inputs. Limitations in the supply of such factors can imply that their local price is quite elastic to
-                domestic economic activity. We examine how this affects the IS and the Phillips curve in a simple New
-                Keynesian open economy setting. We emphasize the role of ownership of the factor, marginal propensities
-                to consume, dual use of the factor in consumption, and fiscal policy. We find that shortages can
-                increase the risk of self-fulfilling fluctuations. A stronger focus by the central bank on input prices
-                or on headline consumer prices removes such risks.
+                In a simple New Keynesian open economy setting, we analyze how local input shortages influence policy
+                transmission and equilibrium determinacy. Shortages increase the elasticity of the local price of the
+                scarce factor to domestic economic activity, affecting the cyclicality of marginal costs and incomes. As
+                a result, the slope of both the Phillips and the IS curve is altered, crucially influencing monetary and
+                fiscal policy transmission. These changes are affected by factor ownership and propensities to consume.
+                Theoretically, shortages can also raise the risk of self-fulfilling fluctuations if a rising price of
+                the constrained factor boosts incomes for agents with high propensities to consume. We illustrate these
+                channels for the 2022 German energy crisis.
               </p>
             </div>
             <div class="px-4 collapse card info" id="bib-GHK_ESPS">
