Update for replication files.

--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@
             <h4 class="section">Working papers</h4>
 
             <p class="p_title_p">
-              <b> Limited (energy) supply, sunspots, and monetary policy </b> |
+              <b> Limited (energy) supply, monetary policy, and sunspots </b> |
               with Nils Gornemann and
-              <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
+              <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a> | code
+              available on <a href="https://github.com/hildebrandecon/replication_GHK2024" class="n_link" role="button"
+                target="_blank">GitHub</a>
             </p>
             <p class="p_abstract_p">
               <a class="collapse-show showAbstract" data-toggle="collapse" href="#abstract-GHK_ESPS" role="button"
