--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               with Nils Gornemann and
               <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a> | code
               available on <a href="https://github.com/hildebrandecon/replication_GHK2024" class="n_link" role="button"
-                target="_blank">GitHub</a>
+                target="_blank">GitHub</a> | accepted at the <b>European Economic Review</b>
             </p>
             <p class="p_abstract_p">
               <a class="collapse-show showAbstract" data-toggle="collapse" href="#abstract-GHK_ESPS" role="button"
@@ -162,7 +162,7 @@
               </a>
               |
               <a href="/papers/GHK_ESPS.pdf" role="button" target="_blank">
-                current version <span class="fa fa-file-pdf-o"></span>
+                accepted version <span class="fa fa-file-pdf-o"></span>
               </a>
               |
               <a href="/papers/ECONtribute_215_2022.pdf" role="button" target="_blank">
