Update End of August.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
+                <a class="nav-link" href="#Publications">Publications</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#WP">Working Papers</a>
               </li>
               <li class="nav-item">
@@ -139,21 +142,20 @@
         </div>
       </header>
 
-      <!-- SECTION WORKING PAPER -->
+      <!-- SECTION PUBLICATIONS -->
 
-      <section id="WP">
+      <section id="Publications">
         <hr class="my-3" />
 
         <div class="row">
           <div class="col-md">
-            <h4 class="section">Working papers</h4>
+            <h4 class="section">Publications</h4>
 
             <p class="p_title_p">
               <b> Limited (energy) supply, monetary policy, and sunspots </b> |
               with Nils Gornemann and
-              <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a> | code
-              available on <a href="https://github.com/hildebrandecon/replication_GHK2024" class="n_link" role="button"
-                target="_blank">GitHub</a> | accepted at the <b>European Economic Review</b>
+              <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a> |
+              <b>European Economic Review</b>, 2024
             </p>
             <p class="p_abstract_p">
               <a class="collapse-show showAbstract" data-toggle="collapse" href="#abstract-GHK_ESPS" role="button"
@@ -161,13 +163,12 @@
                 abstract
               </a>
               |
-              <a href="/papers/GHK_ESPS.pdf" role="button" target="_blank">
-                accepted version <span class="fa fa-file-pdf-o"></span>
+              <a href="https://doi.org/10.1016/j.euroecorev.2024.104823" role="button" target="_blank">
+                published version <span class="fa fa-external-link"></span>
               </a>
               |
-              <a href="/papers/ECONtribute_215_2022.pdf" role="button" target="_blank">
-                ECONtribute discussion paper
-                <span class="fa fa-file-pdf-o"></span>
+              <a href="/papers/GHK_ESPS.pdf" role="button" target="_blank">
+                accepted version <span class="fa fa-file-pdf-o"></span>
               </a>
               |
               <a class="collapse-show showAbstract" data-toggle="collapse" href="#bib-GHK_ESPS" role="button"
@@ -176,6 +177,10 @@
               </a>
               <a href="/papers/GHK_ESPS.bib" role="button" target="_blank">
                 <span class="fa fa-file-code-o"></span>
+              </a>
+              |
+              <a href="https://github.com/hildebrandecon/replication_GHK2024" role="button" target="_blank">
+                replication files <span class="fa fa-github"></span>
               </a>
             </p>
             <div class="px-4 collapse card info" id="abstract-GHK_ESPS">
@@ -192,17 +197,35 @@
             </div>
             <div class="px-4 collapse card info" id="bib-GHK_ESPS">
               <pre>
-@Report{Gornemann2022_WP,
-   author       = {Gornemann, Nils and Hildebrand, Sebastian and Kuester, Keith},
-   date         = {2022-12},
-   title        = {Limited energy supply, sunspots, and monetary policy},
-   type         = {ECONtribute Discussion Paper},
-   number       = {215},
-   abstract     = {A common assumption in macroeconomics is that energy prices are determined in a world-wide, rather frictionless market. This no longer seems an adequate description for the situation that much of Europe currently faces. Rather, one reading is that shortages exist in the quantity of energy available. Such limits to the supply of energy mean that the local price of energy is affected by domestic economic activity. In a simple open-economy New Keynesian setting, the paper shows conditions under which energy shortages can raise the risk of self-fulfilling fluctuations. A firmer focus of the central bank on input prices (or on headline consumer prices) removes such risks.},
-   keywords     = {energy crisis, macroeconomic instability, sunspots, monetary policy, heterogeneous households},
+@article{GORNEMANN2024104823,
+  title    = {Limited (energy) supply, monetary policy, and sunspots},
+  journal  = {European Economic Review},
+  volume   = {168},
+  pages    = {104823},
+  year     = {2024},
+  issn     = {0014-2921},
+  doi      = {https://doi.org/10.1016/j.euroecorev.2024.104823},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0014292124001521},
+  author   = {Nils Gornemann and Sebastian Hildebrand and Keith Kuester},
+  keywords = {Supply constraints, Heterogeneous households, Monetary transmission, Transfer multiplier, Sunspots},
+  abstract = {In a simple New Keynesian open economy setting, we analyze how local input shortages influence policy transmission and equilibrium determinacy. Shortages increase the elasticity of the local price of the scarce factor to domestic economic activity, affecting the cyclicality of marginal costs and incomes. As a result, the slope of both the Phillips and the IS curve is altered, crucially influencing monetary and fiscal policy transmission. These changes are affected by factor ownership and propensities to consume. Theoretically, shortages can also raise the risk of self-fulfilling fluctuations if a rising price of the constrained factor boosts incomes for agents with high propensities to consume. We illustrate these channels for the 2022 German energy crisis.}
 }
                </pre>
             </div>
+
+          </div>
+        </div>
+      </section>
+
+
+      <!-- SECTION WORKING PAPER -->
+
+      <section id="WP">
+        <hr class="my-3" />
+
+        <div class="row">
+          <div class="col-md">
+            <h4 class="section">Working papers</h4>
 
             <p class="p_title_p">
               <b>
@@ -513,6 +536,14 @@
 
             <table>
               <tr>
+                <td style="vertical-align: top">2024 - present</td>
+                <td style="padding-right: 10px"></td>
+                <td>
+                  Research assistant for Prof. Bayer,
+                  University of Bonn
+                </td>
+              </tr>
+              <tr>
                 <td style="vertical-align: top">2023 - 2024</td>
                 <td></td>
                 <td>
@@ -639,7 +670,7 @@
     <footer class="py-3 bg-dark">
       <div class="container px-4">
         <p class="m-0 text-center text-white">
-          Sebastian Hildebrand - University of Bonn | Last updated: June
+          Sebastian Hildebrand - University of Bonn | Last updated: August
           2024.
         </p>
       </div>
